fix: Add missing background color to modals (#140)

--- a/packages/studiocms_ui/src/components/Modal/modal.css
+++ b/packages/studiocms_ui/src/components/Modal/modal.css
@@ -8,6 +8,7 @@
 	margin: auto;
 	z-index: 50;
 	max-width: calc(100% - 4rem);
+	background-color: var(--background-base);
 }
 
 .sui-modal.sm {
